--- a/CDSF03-intro-pandas/00-python-syntax.ipynb
+++ b/CDSF03-intro-pandas/00-python-syntax.ipynb
@@ -1,16 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import pandas as pd"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -223,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -231,10 +221,10 @@
     {
      "data": {
       "text/plain": [
-       "(<enumerate at 0x7fee603685a0>, <zip at 0x7fee60351c88>)"
+       "(<enumerate at 0x7fc51826a9d8>, <zip at 0x7fc4e83fad88>)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -271,16 +261,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(0, 1), (1, 4), (2, 9), (3, 16), (4, 25)]\n"
+     ]
+    }
+   ],
    "source": [
     "print(list(enumerate(a_squared_list)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -291,7 +289,7 @@
        "[(0, 1), (1, 4), (2, 9), (3, 16), (4, 25)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -344,7 +342,7 @@
        "(173946, 1, 66)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -373,7 +371,7 @@
        "31659"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -431,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -477,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -521,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -540,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -551,7 +549,7 @@
        "['HAMLET,', 'OF', 'by', 'Shakespeare']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -581,7 +579,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -637,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -648,7 +646,7 @@
        "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -678,7 +676,7 @@
        "{'a': 1, 'b': 2}"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -696,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -707,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -727,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -738,7 +736,7 @@
        "{'1': 1, '2': 4, '3': 9, '4': 16, '5': 25}"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -778,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -790,7 +788,7 @@
      "traceback": [
       "\u001b[0;31m-----------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-59-f3e3bacee076>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mlastword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"k\"\u001b[0m \u001b[0;31m#cant change a part of a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-28-016f93aece40>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#we cant change a part of a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlastword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"k\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -802,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -813,7 +811,7 @@
        "'.'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -824,16 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -844,7 +833,7 @@
        "\"\\ufeffXXXX||||HAMLET,||||PRINCE||||OF||||DENMARK||||by||||William||||Shakespeare||||PERSONS||||REPRESENTED.||||Claudius,||||King||||of||||Denmark.||||Hamlet,||||Son||||to||||the||||former,||||and||||Nephew||||to||||the||||present||||King.||||Polonius,||||Lord||||Chamberlain.||||Horatio,||||Friend||||to||||Hamlet.||||Laertes,||||Son||||to||||Polonius.||||Voltimand,||||Courtier.||||Cornelius,||||Courtier.||||Rosencrantz,||||Courtier.||||Guildenstern,||||Courtier.||||Osric,||||Courtier.||||A||||Gentleman,||||Courtier.||||A||||Priest.||||Marcellus,||||Officer.||||Bernardo,||||Officer.||||Francisco,||||a||||Soldier||||Reynaldo,||||Servant||||to||||Polonius.||||Players.||||Two||||Clowns,||||Grave-diggers.||||Fortinbras,||||Prince||||of||||Norway.||||A||||Captain.||||English||||Ambassadors.||||Ghost||||of||||Hamlet's||||Father.||||Gertrude,||||Queen||||of||||Denmark,||||and||||Mother||||of||||Hamlet.||||Ophelia,||||Daughter||||to||||Polonius.||||Lords,||||Ladies,||||Officers,||||Soldiers,||||Sailo\""
       ]
      },
-     "execution_count": 63,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -877,7 +866,7 @@
        "(25, 125)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +881,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -901,7 +890,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function square at 0x7fee6059bb70> <class 'function'>\n"
+      "<function square at 0x7fc4e8405ae8> <class 'function'>\n"
      ]
     }
    ],
@@ -918,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -927,7 +916,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 4 <function square at 0x7fee6059bb70>\n"
+      "3 4 <function square at 0x7fc4e8405ae8>\n"
      ]
     },
     {
@@ -936,7 +925,7 @@
        "25"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -983,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -994,7 +983,7 @@
        "True"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1006,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -1017,7 +1006,7 @@
        "False"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
@@ -1061,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -1088,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -1123,7 +1112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -1162,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -1171,7 +1160,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(<class 'TypeError'>, TypeError(\"f() missing 1 required positional argument: 'b'\"), <traceback object at 0x7fee7056e248>)\n"
+      "(<class 'TypeError'>, TypeError(\"f() missing 1 required positional argument: 'b'\"), <traceback object at 0x7fc51826fb08>)\n"
      ]
     }
    ],
@@ -1182,13 +1171,6 @@
     "    import sys\n",
     "    print (sys.exc_info())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
