--- a/CDSF03-intro-pandas/00-python-syntax.ipynb
+++ b/CDSF03-intro-pandas/00-python-syntax.ipynb
@@ -32,15 +32,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Notice integer division and floating-point error below!"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -51,13 +44,13 @@
        "(0.5, 0.5, 9.600000000000001)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1/2,1.0/2.0,3*3.2"
+    "1/2, 1.0/2.0, 3*3.2"
    ]
   },
   {
@@ -182,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -193,13 +186,13 @@
        "[1, 4, 9, 16, 25]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a_list = [1,2,3,4,5]\n",
+    "a_list = [1, 2, 3, 4, 5]\n",
     "a_squared_list = [i*i for i in a_list]\n",
     "a_squared_list"
    ]
@@ -208,12 +201,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python has functions like `enumerate` and `zip`. THey allow us to work with list and have some handy functionalities. `enumerate` gives a list of tuples with each tuple of the form `(index, value)`, while the `zip` takes elements from each list and outs them together into a tuple, thus creating a list of tuples. "
+    "Python has functions like `enumerate` and `zip`. They allow us to work with list and have some handy functionalities. `enumerate` gives a list of tuples with each tuple of the form `(index, value)`, while the `zip` takes elements from each list and outs them together into a tuple, thus creating a list of tuples. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -221,10 +214,10 @@
     {
      "data": {
       "text/plain": [
-       "(<enumerate at 0x7fc51826a9d8>, <zip at 0x7fc4e83fad88>)"
+       "(<enumerate at 0x7fab6823fee8>, <zip at 0x7fab68255c88>)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,6 +231,53 @@
    "metadata": {},
    "source": [
     "Pytohn is lazy, and will always return an iterator. To get the values one need either create a `for` loop or use any other operation that works with an iterator."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the values of the 0-th record in the list is 1\n",
+      "the values of the 1-th record in the list is 4\n",
+      "the values of the 2-th record in the list is 9\n",
+      "the values of the 3-th record in the list is 16\n",
+      "the values of the 4-th record in the list is 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, value in enumerate(a_squared_list):\n",
+    "    print(f'the values of the {i}-th record in the list is {value}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the values of the 0-th record in the list is 1\n",
+      "the values of the 1-th record in the list is 4\n",
+      "the values of the 2-th record in the list is 9\n",
+      "the values of the 3-th record in the list is 16\n",
+      "the values of the 4-th record in the list is 25\n"
+     ]
+    }
+   ],
+   "source": [
+    "#enumerate is similar to\n",
+    "count = 0\n",
+    "for value in a_squared_list:\n",
+    "    print(f'the values of the {count}-th record in the list is {value}')\n",
+    "    count += 1"
    ]
   },
   {
@@ -278,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -289,7 +329,7 @@
        "[(0, 1), (1, 4), (2, 9), (3, 16), (4, 25)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -323,9 +363,8 @@
     }
    ],
    "source": [
-    "\n",
     "#this is a poor way of opening a file. it does not close the file\n",
-    "linelengths=[len(line) for line in open(\"data/hamlet.txt\")]\n",
+    "linelengths = [len(line) for line in open(\"data/hamlet.txt\")]\n",
     "print(linelengths)"
    ]
   },
@@ -360,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -371,16 +410,16 @@
        "31659"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hamletfile=open(\"data/hamlet.txt\")\n",
-    "hamlettext=hamletfile.read()\n",
+    "hamletfile = open(\"data/hamlet.txt\")\n",
+    "hamlettext = hamletfile.read()\n",
     "hamletfile.close()\n",
-    "hamlettokens=hamlettext.split() #split with no arguments splits on whitespace\n",
+    "hamlettokens = hamlettext.split() #split with no arguments splits on whitespace\n",
     "len(hamlettokens)"
    ]
   },
@@ -429,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -514,12 +553,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lets split the word tokens. The first one below reads, give me the second, third, and fourth words (remember that python is 0 indexed). Try and figure what the others mean."
+    "Lets split the word tokens."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -559,6 +598,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['off.]', 'is', 'of', 'a']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hamlettokens[:-8:-2] #get every 2nd world between the last and the last-8:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#revert the list. \n",
+    "hamlettokens[::-1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -568,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -579,7 +648,7 @@
        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -587,6 +656,52 @@
    "source": [
     "mylist = []\n",
     "for i in range(10):\n",
+    "    mylist.append(i)\n",
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist = []\n",
+    "for i in range(1,10):\n",
+    "    mylist.append(i)\n",
+    "mylist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[10, 9, 8, 7, 6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mylist = []\n",
+    "for i in range(10,0,-1):\n",
     "    mylist.append(i)\n",
     "mylist"
    ]
@@ -600,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -635,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -646,7 +761,7 @@
        "{1: 1, 2: 4, 3: 9, 4: 16, 5: 25}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -676,7 +791,7 @@
        "{'a': 1, 'b': 2}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
@@ -705,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -725,7 +840,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'{\"1\": 1, \"2\": 4, \"3\": 9, \"4\": 16, \"5\": 25}'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -736,7 +871,7 @@
        "{'1': 1, '2': 4, '3': 9, '4': 16, '5': 25}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,12 +886,12 @@
    "source": [
     "## Strings\n",
     "\n",
-    "Basically they behave like immutable lists"
+    "Basically they behave like immutable lists ( I cannot edit after declaration)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -776,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -786,9 +921,9 @@
      "evalue": "'str' object does not support item assignment",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-----------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-28-016f93aece40>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#we cant change a part of a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlastword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"k\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-016f93aece40>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#we cant change a part of a string\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlastword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"k\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -848,14 +983,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functions\n",
-    "\n",
-    "Functions are even more the bread and butter. You'll see them as methods on objects, or standing alone by themselves."
+    "## Functions\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
@@ -866,7 +999,7 @@
        "(25, 125)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,6 +1007,7 @@
    "source": [
     "def square(x):\n",
     "    return(x*x)\n",
+    "\n",
     "def cube(x):\n",
     "    return x*x*x\n",
     "square(5),cube(5)"
@@ -881,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -890,7 +1024,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function square at 0x7fc4e8405ae8> <class 'function'>\n"
+      "<function square at 0x7fab685f1510> <class 'function'>\n"
      ]
     }
    ],
@@ -931,7 +1065,7 @@
     }
    ],
    "source": [
-    "def sum_of_anything(x,y,f):\n",
+    "def sum_of_anything(x, y, f):\n",
     "    print(x,y,f)\n",
     "    return(f(x) + f(y))\n",
     "sum_of_anything(3,4,square)"
@@ -946,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 43,
    "metadata": {
     "collapsed": false
    },
@@ -971,8 +1105,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More lists"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -983,7 +1124,7 @@
        "True"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -995,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -1006,7 +1147,7 @@
        "False"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,15 +1157,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## IF\n",
     "Python supports if/elif/else clauses for multi-way conditionals"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -1050,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -1112,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -1131,7 +1280,7 @@
    ],
    "source": [
     "i=0\n",
-    "while i < 10:\n",
+    "while True:\n",
     "    print( i)\n",
     "    i=i+1\n",
     "    if i < 5:\n",
@@ -1151,7 +1300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(a, b):\n",
+    "    print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -1160,17 +1319,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(<class 'TypeError'>, TypeError(\"f() missing 1 required positional argument: 'b'\"), <traceback object at 0x7fc51826fb08>)\n"
+      "f() missing 1 required positional argument: 'b'\n"
      ]
     }
    ],
    "source": [
     "try:\n",
-    "    f(1) #takes atleast 2 arguments\n",
-    "except:\n",
-    "    import sys\n",
-    "    print (sys.exc_info())"
+    "    f(1) #takes at least 2 arguments\n",
+    "except Exception as e:\n",
+    "    print (e)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
