add file RECAP01

--- a/RECAP01/eda.ipynb
+++ b/RECAP01/eda.ipynb
@@ -15,11 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_json('challenge.json')"
+    "#Lembre-se de extrair o arquivo zip da pasta data/\n",
+    "df = pd.read_json('data/challenge.json')"
    ]
   },
   {
